--- a/src/blocks/header/header.styl
+++ b/src/blocks/header/header.styl
@@ -5,6 +5,9 @@
 
 	@media screen and (max-width: 740px)
 		height 600px
+		image-bg("header-bg-mobile.png")
+		background-size auto 100%
+		background-position 50% 50%
 
 	&__appear
 		display none
