--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -10,6 +10,7 @@
 @import '../blocks/**/**'
 @import './components/**/**'
 @import './ordinary-react-components/**/**'
+@import './modal-contents'
 
 @import './custom-components'
 @import './table-styles'
