--- a/src/styles/custom-components.styl
+++ b/src/styles/custom-components.styl
@@ -122,5 +122,8 @@ $select-black-color = alpha($main-color, 95%)
 	@media screen and (max-width: 1200px)
 		max-width 90% !important
 
+	@media screen and (max-width: 560px)
+		max-width 100% !important
+
 .remodal-cancel
 	background-color $main-color !important
