--- a/src/views/contacts.pug
+++ b/src/views/contacts.pug
@@ -5,6 +5,10 @@ include ../blocks/section-contacts/section-contacts
 doctype html
 html(lang='ru')
 	include ./_head
+	+head(
+	title,
+	`автомойка, где мы находимся, карта, местоположение автомойки, часы работы автомойки, калькулятор услуг, автомойка в москве, автомойка мойка.su, автомойка на калужском шоссе, автомойка,мойка автомобиля, г.Москваг.Троицк Калужское шоссе д. 38, мойка машин, мойка автомобиля, `
+	)
 	title= title
 	body.contacts-page
 		- const name = "Контакты"
