--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -6,6 +6,10 @@ include ../blocks/footer/footer
 doctype html
 html(lang='ru')
 	include ./_head
+	+head(
+	'Круглосуточная мойка в Москве на калужском шоссе предлагает качественный сервис по выгодным ценам',
+	'автомойка, автомойка в москве, автомойка москва, автомойка мойка.su, круглосуточная комплексная мойка кузова уборка салона автомойка мойка.su калужское шоссе'
+	)
 	title= title
 	body.index-page
 		block content
