--- a/src/views/price-list.pug
+++ b/src/views/price-list.pug
@@ -6,6 +6,10 @@ include ./_in-development
 doctype html
 html(lang='ru')
 	include ./_head
+	+head(
+	title,
+	`автомойка, автомойка в москве,автомойка москва, автомойка мойка.su, автомойка на калужском шоссе, автомойка,мойка автомобиля, нано мойка, чистка салона автомобиля, полировка автомобиля, г.Москваг.Троицк Калужское шоссе д. 38, мойка машин, мойка автомобиля, мойка кузова,мойка двигателя, наномойка, нано мойка, полировка,полировка стекол, нанополировка, нано полировка, чистка салона, химчистка, химчистка автомобиля, предпродажная подготовка`
+	)
 	title= title
 	body.price-list-page
 		- const name = "Цены"
