--- a/src/views/vacancies.pug
+++ b/src/views/vacancies.pug
@@ -5,6 +5,7 @@ include ./_in-development
 doctype html
 html(lang='ru')
 	include ./_head
+	+head()
 	title= title
 	body.vacancies-page
 		- const name = "Вакансии"
