--- a/src/blocks/services-nav/services-nav.styl
+++ b/src/blocks/services-nav/services-nav.styl
@@ -16,10 +16,12 @@
 		display flex
 		flex-wrap wrap
 		padding 15px
-		align-self center
+		margin 0 auto
+		min-width 700px
 
 		@media screen and (max-width: 860px)
 			max-width 400px
+			min-width 0
 			justify-content center
 
 	&-element
