--- a/src/views/about-us.pug
+++ b/src/views/about-us.pug
@@ -5,6 +5,7 @@ include ./_in-development
 doctype html
 html(lang='ru')
 	include ./_head
+	+head()
 	title= title
 	body.about-us-page
 		- const name = "О нас"
