--- a/src/views/autoclubs.pug
+++ b/src/views/autoclubs.pug
@@ -5,6 +5,7 @@ include ./_in-development
 doctype html
 html(lang='ru')
 	include ./_head
+	+head()
 	title= title
 	body.autoclubs-page
 		- const name = "Автоклубам"
