--- a/src/views/calculator-service.pug
+++ b/src/views/calculator-service.pug
@@ -5,6 +5,10 @@ include ../blocks/section-calculator-service/section-calculator-service
 doctype html
 html(lang='ru')
 	include ./_head
+	+head(
+	title,
+	`автомойка, калькулятор услуг, посчитать стоимость мойки, автомойка в москве,автомойка москва, автомойка мойка.su, автомойка на калужском шоссе, автомойка,мойка автомобиля, нано мойка, чистка салона автомобиля, полировка автомобиля, г.Москваг.Троицк Калужское шоссе д. 38, мойка машин, мойка автомобиля, мойка кузова,мойка двигателя, наномойка, нано мойка, полировка,полировка стекол, нанополировка, нано полировка, чистка салона, химчистка, химчистка автомобиля, предпродажная подготовка`
+	)
 	title= title
 	body.calculator-service-page
 		block content
