--- a/src/views/club-card.pug
+++ b/src/views/club-card.pug
@@ -5,6 +5,7 @@ include ./_in-development
 doctype html
 html(lang='ru')
 	include ./_head
+	+head()
 	title= title
 	body.club-card-page
 		- const name = "Скидки и акции"
