--- a/src/views/first-visit.pug
+++ b/src/views/first-visit.pug
@@ -5,6 +5,7 @@ include ./_in-development
 doctype html
 html(lang='ru')
 	include ./_head
+	+head()
 	title= title
 	body.first-vizit-page
 		- const name = "Скидки и акции"
